# CS-3710-pa1-xfuzz

./: .flake8  .gitignore  .pre-commit-config.yaml  ASSIGNMENT.md  INSTALL.md  README.md  pyproject.toml  requirements.txt  setup.py  test.requirements.txt  tox.ini
.github/workflows/: CI.yml
docker/: README.md  aiotime.py  curltime.sh  docker-compose.yml  localtest.yml
docker/apiserver/: Dockerfile
docker/client/: Dockerfile
docker/metrics/: dashboards.yaml  datasources.yaml  prometheus.yml
docker/metrics/dashboards/Server/: xfuzz.json
docker/proxy/: Caddyfile  Dockerfile  entrypoint.sh  settings.env
docker/proxy/html/: index.html
docker/secrets/: .gitignore  setup.sh
test/: __init__.py  conftest.py  interactive.py  live_server.py  test_cli.py  test_defaults.py  test_extra.py  test_server.py  utils.py
test/server/: __init__.py  app.py  auth.py  enum.py  ext.py  middleware.py  settings.py  user.py  vhost.py
test/wordlists/: __init__.py  common.txt
xfuzz/: __init__.py  __main__.py  _typing.py  cmd.py  fuzz.py
