[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
disallow_untyped_calls = true
disallow_subclassing_any = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "-rA"
asyncio_mode = "auto"
testpaths = ["test"]
